--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,25 @@
     <title>Hello World!</title>
     <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <link rel="stylesheet" href="../assets/css/main.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <div class="row">
+      <div id="price-container">
+        <p class="subtext">Current BTC USD</p>
+        <h1 id="price">Loading...</h1>
+      </div>
+      <div id="goal-container">
+        <p>
+          <img src="../assets/images/up.svg" alt="images">
+          <span id="targePrice">Choose a Target Price</span>
+        </p>
+      </div>
+      <div id="right-container">
+        <button id="notifyBtn">Notify me when...</button>
+      </div>
+    </div>
+
+    <script src="index.js"></script>
   </body>
 </html>
