Add close btn to Add Modal

--- a/src/add.html
+++ b/src/add.html
@@ -19,7 +19,7 @@
     <button id="updateBtn">Update</button>
   </div>
 
-  <a id="closeBtn"></a> <br>
+  <a id="closeBtn">Close Window</a><br>
 
   <script src="add.js"></script>
 </body>
