Use IPC for transmit informations between windows

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <div id="goal-container">
         <p>
           <img src="../assets/images/up.svg" alt="images">
-          <span id="targePrice">Choose a Target Price</span>
+          <span id="targetPrice">Choose a Target Price</span>
         </p>
       </div>
       <div id="right-container">
